# cr-docs_analyser

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  RESULTS.md  TODO.md  Xelians-DocumentType.csv  data_analysis.ipynb  dataset_labels.csv  export_xelians_analysis.ipynb  main.py  preprocess_pdfs.py  pyproject.toml  rename_dataset.py  results.csv  xelians-filenames.csv  xelians-filenames.txt
dataset/: test_data.csv
docs_analyser/: azure_analyser.py  azure_vision_analyser.py  base.py  blob_source.py  mistral_analyser.py  mistral_vision_analyser.py
tests/: test_dataset.py  test_file_access.py  test_main.py  test_mocks.py  test_preprocess_pdfs.py
